--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             lenorePortrait: 'imgs/LenoreRetrait.jpg',
             bookshelf: 'imgs/Estante.png',
             pallasBust: 'imgs/Busto.png',
-            doorClosed: 'imgs/portaFechando.png',
-            doorOpen: 'imgs/portaAbrindo.png', // se não existir, fallback será usado
+            doorClosed: 'imgs/PortaFechando.png',
+            doorOpen: 'imgs/PortaAbrindo.png', // se não existir, fallback será usado
             window: 'imgs/janela.png'
         };
 
